--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/nimowagukari/npm-modules-tutorial.git"
   },
   "author": "nimowagukari",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/nimowagukari/npm-modules-tutorial/issues"
   },
