--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "npm-modules-tutorial",
-  "type": "module",
   "version": "0.1.0",
   "description": "nimowagukari's test module for study of npm modules.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/nimowagukari/npm-modules-tutorial/issues"
   },
-  "homepage": "https://github.com/nimowagukari/npm-modules-tutorial#readme"
+  "homepage": "https://github.com/nimowagukari/npm-modules-tutorial#readme",
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8"
+  }
 }
