--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "nimowagukari's test module for study of npm modules.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,9 @@
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
+    "lint-staged": "^13.2.3",
     "prettier": "^2.8.8"
   }
 }
